--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "angular-resource": "~1.2.0",
     "angular-cookies": "~1.2.0",
     "angular-sanitize": "~1.2.0",
-    "angular-route": "~1.2.0"
+    "angular-route": "~1.2.0",
+    "angular-translate": "~1.1.1",
+    "angular-translate-loader-static-files":"~0.1.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
