--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "~1.2.0",
     "angular-route": "~1.2.0",
     "angular-translate": "~1.1.1",
-    "angular-translate-loader-static-files":"~0.1.6"
+    "angular-translate-loader-static-files":"~0.1.6",
+    "angular-ui-bootstrap" : "~0.7.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
