--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
     "grunt-rev": "~0.1.0",
     "load-grunt-tasks": "~0.2.0",
     "grunt-contrib-less": "~0.7.0",
-    "grunt-contrib-jade": "~0.8.0"
+    "grunt-contrib-jade": "~0.8.0",
+    "grunt-usemin": "~2.0.1",
+    "grunt-ngmin": "0.0.3",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-uglify": "~0.3.0",
+    "grunt-contrib-imagemin": "~0.5.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-angular-templates": "~0.5.1"
   },
   "engines": {
     "node": ">=0.8.0"
